--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="side-nav">
     <div class="side-nav__backdrop"></div>
     <div class="side-nav__panel">
-      <div class="side-nav__close">&times;</div>
+      <div class="side-nav__panel__close">&times;</div>
       <div class="side-nav__panel__content">
         Sidenav
       </div>
