--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="side-nav">
     <div class="side-nav__backdrop"></div>
     <div class="side-nav__panel">
-      <div class="side-nav__panel__close">&times;</div>
-      <div class="side-nav__panel__content">
+      <div class="side-nav__panel-close">&times;</div>
+      <div class="side-nav__panel-content">
         Sidenav
       </div>
-      <ul class="side-nav__panel__links">
+      <ul class="side-nav__panel-links">
         <li>Dashboard</li>
         <li>Services</li>
         <li>About</li>
